src/cpp/include/mujoco/mjspec.h

  
  typedef void mjString;
  typedef void mjStringVec;
  typedef void mjIntVec;
  typedef void mjIntVecVec;
  typedef void mjFloatVec;
  typedef void mjFloatVecVec;
  typedef void mjDoubleVec;
  typedef void mjByteVec;
typedef enum mjtGeomInertia_ {     
  mjINERTIA_VOLUME = 0,            
  mjINERTIA_SHELL,                 
} mjtGeomInertia;
typedef enum mjtMeshInertia_ {      
  mjMESH_INERTIA_CONVEX = 0,        
  mjMESH_INERTIA_EXACT,             
  mjMESH_INERTIA_LEGACY,            
  mjMESH_INERTIA_SHELL              
} mjtMeshInertia;
typedef enum mjtBuiltin_ {         
  mjBUILTIN_NONE = 0,              
  mjBUILTIN_GRADIENT,              
  mjBUILTIN_CHECKER,               
  mjBUILTIN_FLAT                   
} mjtBuiltin;
typedef enum mjtMark_ {            
  mjMARK_NONE = 0,                 
  mjMARK_EDGE,                     
  mjMARK_CROSS,                    
  mjMARK_RANDOM                    
} mjtMark;
typedef enum mjtLimited_ {         
  mjLIMITED_FALSE = 0,             
  mjLIMITED_TRUE,                  
  mjLIMITED_AUTO,                  
} mjtLimited;
typedef enum mjtAlignFree_ {       
  mjALIGNFREE_FALSE = 0,           
  mjALIGNFREE_TRUE,                
  mjALIGNFREE_AUTO,                
} mjtAlignFree;
typedef enum mjtInertiaFromGeom_ { 
  mjINERTIAFROMGEOM_FALSE = 0,     
  mjINERTIAFROMGEOM_TRUE,          
  mjINERTIAFROMGEOM_AUTO           
} mjtInertiaFromGeom;
typedef enum mjtOrientation_ {     
  mjORIENTATION_QUAT = 0,          
  mjORIENTATION_AXISANGLE,         
  mjORIENTATION_XYAXES,            
  mjORIENTATION_ZAXIS,             
  mjORIENTATION_EULER,             
} mjtOrientation;
typedef struct mjsElement_ {       
  mjtObj elemtype;                 
  uint64_t signature;              
} mjsElement;
typedef struct mjsCompiler_ {      
  mjtByte autolimits;              
  double boundmass;                
  double boundinertia;             
  double settotalmass;             
  mjtByte balanceinertia;          
  mjtByte fitaabb;                 
  mjtByte degree;                  
  char eulerseq[3];                
  mjtByte discardvisual;           
  mjtByte usethread;               
  mjtByte fusestatic;              
  int inertiafromgeom;             
  int inertiagrouprange[2];        
  mjtByte saveinertial;            
  int alignfree;                   
  mjLROpt LRopt;                   
} mjsCompiler;
typedef struct mjSpec_ {           
  mjsElement* element;             
  mjString* modelname;             
  mjsCompiler compiler;            
  mjtByte strippath;               
  mjString* meshdir;               
  mjString* texturedir;            
  mjOption option;                 
  mjVisual visual;                 
  mjStatistic stat;                
  size_t memory;                   
  int nemax;                       
  int nuserdata;                   
  int nuser_body;                  
  int nuser_jnt;                   
  int nuser_geom;                  
  int nuser_site;                  
  int nuser_cam;                   
  int nuser_tendon;                
  int nuser_actuator;              
  int nuser_sensor;                
  int nkey;                        
  int njmax;                       
  int nconmax;                     
  size_t nstack;                   
  mjString* comment;               
  mjString* modelfiledir;          
  mjtByte hasImplicitPluginElem;   
} mjSpec;
typedef struct mjsOrientation_ {   
  mjtOrientation type;             
  double axisangle[4];             
  double xyaxes[6];                
  double zaxis[3];                 
  double euler[3];                 
} mjsOrientation;
typedef struct mjsPlugin_ {        
  mjsElement* element;             
  mjString* name;                  
  mjString* plugin_name;           
  mjtByte active;                  
  mjString* info;                  
} mjsPlugin;
typedef struct mjsBody_ {          
  mjsElement* element;             
  mjString* name;                  
  mjString* childclass;            
  double pos[3];                   
  double quat[4];                  
  mjsOrientation alt;              
  double mass;                     
  double ipos[3];                  
  double iquat[4];                 
  double inertia[3];               
  mjsOrientation ialt;             
  double fullinertia[6];           
  mjtByte mocap;                   
  double gravcomp;                 
  mjDoubleVec* userdata;           
  mjtByte explicitinertial;        
  mjsPlugin plugin;                
  mjString* info;                  
} mjsBody;
typedef struct mjsFrame_ {         
  mjsElement* element;             
  mjString* name;                  
  mjString* childclass;            
  double pos[3];                   
  double quat[4];                  
  mjsOrientation alt;              
  mjString* info;                  
} mjsFrame;
typedef struct mjsJoint_ {         
  mjsElement* element;             
  mjString* name;                  
  mjtJoint type;                   
  double pos[3];                   
  double axis[3];                  
  double ref;                      
  int align;                       
  double stiffness;                
  double springref;                
  double springdamper[2];          
  int limited;                     
  double range[2];                 
  double margin;                   
  mjtNum solref_limit[mjNREF];     
  mjtNum solimp_limit[mjNIMP];     
  int actfrclimited;               
  double actfrcrange[2];           
  double armature;                 
  double damping;                  
  double frictionloss;             
  mjtNum solref_friction[mjNREF];  
  mjtNum solimp_friction[mjNIMP];  
  int group;                       
  mjtByte actgravcomp;             
  mjDoubleVec* userdata;           
  mjString* info;                  
} mjsJoint;
typedef struct mjsGeom_ {          
  mjsElement* element;             
  mjString* name;                  
  mjtGeom type;                    
  double pos[3];                   
  double quat[4];                  
  mjsOrientation alt;              
  double fromto[6];                
  double size[3];                  
  int contype;                     
  int conaffinity;                 
  int condim;                      
  int priority;                    
  double friction[3];              
  double solmix;                   
  mjtNum solref[mjNREF];           
  mjtNum solimp[mjNIMP];           
  double margin;                   
  double gap;                      
  double mass;                     
  double density;                  
  mjtGeomInertia typeinertia;      
  mjtNum fluid_ellipsoid;          
  mjtNum fluid_coefs[5];           
  mjString* material;              
  float rgba[4];                   
  int group;                       
  mjString* hfieldname;            
  mjString* meshname;              
  double fitscale;                 
  mjDoubleVec* userdata;           
  mjsPlugin plugin;                
  mjString* info;                  
} mjsGeom;
typedef struct mjsSite_ {          
  mjsElement* element;             
  mjString* name;                  
  double pos[3];                   
  double quat[4];                  
  mjsOrientation alt;              
  double fromto[6];                
  double size[3];                  
  mjtGeom type;                    
  mjString* material;              
  int group;                       
  float rgba[4];                   
  mjDoubleVec* userdata;           
  mjString* info;                  
} mjsSite;
typedef struct mjsCamera_ {        
  mjsElement* element;             
  mjString* name;                  
  double pos[3];                   
  double quat[4];                  
  mjsOrientation alt;              
  mjtCamLight mode;                
  mjString* targetbody;            
  int orthographic;                
  double fovy;                     
  double ipd;                      
  float intrinsic[4];              
  float sensor_size[2];            
  float resolution[2];             
  float focal_length[2];           
  float focal_pixel[2];            
  float principal_length[2];       
  float principal_pixel[2];        
  mjDoubleVec* userdata;           
  mjString* info;                  
} mjsCamera;
typedef struct mjsLight_ {         
  mjsElement* element;             
  mjString* name;                  
  double pos[3];                   
  double dir[3];                   
  mjtCamLight mode;                
  mjString* targetbody;            
  mjtByte active;                  
  mjtByte directional;             
  mjtByte castshadow;              
  double bulbradius;               
  float attenuation[3];            
  float cutoff;                    
  float exponent;                  
  float ambient[3];                
  float diffuse[3];                
  float specular[3];               
  mjString* info;                  
} mjsLight;
typedef struct mjsFlex_ {          
  mjsElement* element;             
  mjString* name;                  
  int contype;                     
  int conaffinity;                 
  int condim;                      
  int priority;                    
  double friction[3];              
  double solmix;                   
  mjtNum solref[mjNREF];           
  mjtNum solimp[mjNIMP];           
  double margin;                   
  double gap;                      
  int dim;                         
  double radius;                   
  mjtByte internal;                
  mjtByte flatskin;                
  int selfcollide;                 
  int activelayers;                
  int group;                       
  double edgestiffness;            
  double edgedamping;              
  float rgba[4];                   
  mjString* material;              
  double young;                    
  double poisson;                  
  double damping;                  
  double thickness;                
  mjStringVec* nodebody;           
  mjStringVec* vertbody;           
  mjDoubleVec* node;               
  mjDoubleVec* vert;               
  mjIntVec* elem;                  
  mjFloatVec* texcoord;            
  mjIntVec* elemtexcoord;          
  mjString* info;                  
} mjsFlex;
typedef struct mjsMesh_ {          
  mjsElement* element;             
  mjString* name;                  
  mjString* content_type;          
  mjString* file;                  
  double refpos[3];                
  double refquat[4];               
  double scale[3];                 
  mjtMeshInertia inertia;          
  mjtByte smoothnormal;            
  int maxhullvert;                 
  mjFloatVec* uservert;            
  mjFloatVec* usernormal;          
  mjFloatVec* usertexcoord;        
  mjIntVec* userface;              
  mjIntVec* userfacetexcoord;      
  mjsPlugin plugin;                
  mjString* info;                  
} mjsMesh;