src/mujoco_c.rs

pub type mjrContext = mjrContext_;
pub type mjString = std_string;
pub type mjStringVec = __BindgenOpaqueArray<u64, 3usize>;
pub type mjIntVec = __BindgenOpaqueArray<u64, 3usize>;
pub type mjIntVecVec = u8;
pub type mjFloatVec = u8;
pub type mjFloatVecVec = u8;
pub type mjDoubleVec = __BindgenOpaqueArray<u64, 3usize>;
pub type mjByteVec = u8;
pub const mjtGeomInertia__mjINERTIA_VOLUME: mjtGeomInertia_ = 0;
pub const mjtGeomInertia__mjINERTIA_SHELL: mjtGeomInertia_ = 1;
pub type mjtGeomInertia_ = ::std::os::raw::c_uint;
pub use self::mjtGeomInertia_ as mjtGeomInertia;
pub const mjtMeshInertia__mjMESH_INERTIA_CONVEX: mjtMeshInertia_ = 0;
pub const mjtMeshInertia__mjMESH_INERTIA_EXACT: mjtMeshInertia_ = 1;
pub const mjtMeshInertia__mjMESH_INERTIA_LEGACY: mjtMeshInertia_ = 2;
pub const mjtMeshInertia__mjMESH_INERTIA_SHELL: mjtMeshInertia_ = 3;
pub type mjtMeshInertia_ = ::std::os::raw::c_uint;
pub use self::mjtMeshInertia_ as mjtMeshInertia;
pub const mjtBuiltin__mjBUILTIN_NONE: mjtBuiltin_ = 0;
pub const mjtBuiltin__mjBUILTIN_GRADIENT: mjtBuiltin_ = 1;
pub const mjtBuiltin__mjBUILTIN_CHECKER: mjtBuiltin_ = 2;
pub const mjtBuiltin__mjBUILTIN_FLAT: mjtBuiltin_ = 3;
pub type mjtBuiltin_ = ::std::os::raw::c_uint;
pub use self::mjtBuiltin_ as mjtBuiltin;
pub const mjtMark__mjMARK_NONE: mjtMark_ = 0;
pub const mjtMark__mjMARK_EDGE: mjtMark_ = 1;
pub const mjtMark__mjMARK_CROSS: mjtMark_ = 2;
pub const mjtMark__mjMARK_RANDOM: mjtMark_ = 3;
pub type mjtMark_ = ::std::os::raw::c_uint;
pub use self::mjtMark_ as mjtMark;
pub const mjtLimited__mjLIMITED_FALSE: mjtLimited_ = 0;
pub const mjtLimited__mjLIMITED_TRUE: mjtLimited_ = 1;
pub const mjtLimited__mjLIMITED_AUTO: mjtLimited_ = 2;
pub type mjtLimited_ = ::std::os::raw::c_uint;
pub use self::mjtLimited_ as mjtLimited;
pub const mjtAlignFree__mjALIGNFREE_FALSE: mjtAlignFree_ = 0;
pub const mjtAlignFree__mjALIGNFREE_TRUE: mjtAlignFree_ = 1;
pub const mjtAlignFree__mjALIGNFREE_AUTO: mjtAlignFree_ = 2;
pub type mjtAlignFree_ = ::std::os::raw::c_uint;
pub use self::mjtAlignFree_ as mjtAlignFree;
pub const mjtInertiaFromGeom__mjINERTIAFROMGEOM_FALSE: mjtInertiaFromGeom_ = 0;
pub const mjtInertiaFromGeom__mjINERTIAFROMGEOM_TRUE: mjtInertiaFromGeom_ = 1;
pub const mjtInertiaFromGeom__mjINERTIAFROMGEOM_AUTO: mjtInertiaFromGeom_ = 2;
pub type mjtInertiaFromGeom_ = ::std::os::raw::c_uint;
pub use self::mjtInertiaFromGeom_ as mjtInertiaFromGeom;
pub const mjtOrientation__mjORIENTATION_QUAT: mjtOrientation_ = 0;
pub const mjtOrientation__mjORIENTATION_AXISANGLE: mjtOrientation_ = 1;
pub const mjtOrientation__mjORIENTATION_XYAXES: mjtOrientation_ = 2;
pub const mjtOrientation__mjORIENTATION_ZAXIS: mjtOrientation_ = 3;
pub const mjtOrientation__mjORIENTATION_EULER: mjtOrientation_ = 4;
pub type mjtOrientation_ = ::std::os::raw::c_uint;
pub use self::mjtOrientation_ as mjtOrientation;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsElement_ {
    pub elemtype: mjtObj,
    pub signature: u64,
}
pub type mjsElement = mjsElement_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsCompiler_ {
    pub autolimits: mjtByte,
    pub boundmass: f64,
    pub boundinertia: f64,
    pub settotalmass: f64,
    pub balanceinertia: mjtByte,
    pub fitaabb: mjtByte,
    pub degree: mjtByte,
    pub eulerseq: [::std::os::raw::c_char; 3usize],
    pub discardvisual: mjtByte,
    pub usethread: mjtByte,
    pub fusestatic: mjtByte,
    pub inertiafromgeom: ::std::os::raw::c_int,
    pub inertiagrouprange: [::std::os::raw::c_int; 2usize],
    pub saveinertial: mjtByte,
    pub alignfree: ::std::os::raw::c_int,
    pub LRopt: mjLROpt,
}
pub type mjsCompiler = mjsCompiler_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjSpec_ {
    pub element: *mut mjsElement,
    pub modelname: *mut mjString,
    pub compiler: mjsCompiler,
    pub strippath: mjtByte,
    pub meshdir: *mut mjString,
    pub texturedir: *mut mjString,
    pub option: mjOption,
    pub visual: mjVisual,
    pub stat: mjStatistic,
    pub memory: usize,
    pub nemax: ::std::os::raw::c_int,
    pub nuserdata: ::std::os::raw::c_int,
    pub nuser_body: ::std::os::raw::c_int,
    pub nuser_jnt: ::std::os::raw::c_int,
    pub nuser_geom: ::std::os::raw::c_int,
    pub nuser_site: ::std::os::raw::c_int,
    pub nuser_cam: ::std::os::raw::c_int,
    pub nuser_tendon: ::std::os::raw::c_int,
    pub nuser_actuator: ::std::os::raw::c_int,
    pub nuser_sensor: ::std::os::raw::c_int,
    pub nkey: ::std::os::raw::c_int,
    pub njmax: ::std::os::raw::c_int,
    pub nconmax: ::std::os::raw::c_int,
    pub nstack: usize,
    pub comment: *mut mjString,
    pub modelfiledir: *mut mjString,
    pub hasImplicitPluginElem: mjtByte,
}
pub type mjSpec = mjSpec_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsOrientation_ {
    pub type_: mjtOrientation,
    pub axisangle: [f64; 4usize],
    pub xyaxes: [f64; 6usize],
    pub zaxis: [f64; 3usize],
    pub euler: [f64; 3usize],
}
pub type mjsOrientation = mjsOrientation_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsPlugin_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub plugin_name: *mut mjString,
    pub active: mjtByte,
    pub info: *mut mjString,
}
pub type mjsPlugin = mjsPlugin_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsBody_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub childclass: *mut mjString,
    pub pos: [f64; 3usize],
    pub quat: [f64; 4usize],
    pub alt: mjsOrientation,
    pub mass: f64,
    pub ipos: [f64; 3usize],
    pub iquat: [f64; 4usize],
    pub inertia: [f64; 3usize],
    pub ialt: mjsOrientation,
    pub fullinertia: [f64; 6usize],
    pub mocap: mjtByte,
    pub gravcomp: f64,
    pub userdata: *mut mjDoubleVec,
    pub explicitinertial: mjtByte,
    pub plugin: mjsPlugin,
    pub info: *mut mjString,
}
pub type mjsBody = mjsBody_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsFrame_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub childclass: *mut mjString,
    pub pos: [f64; 3usize],
    pub quat: [f64; 4usize],
    pub alt: mjsOrientation,
    pub info: *mut mjString,
}
pub type mjsFrame = mjsFrame_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsJoint_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub type_: mjtJoint,
    pub pos: [f64; 3usize],
    pub axis: [f64; 3usize],
    pub ref_: f64,
    pub align: ::std::os::raw::c_int,
    pub stiffness: f64,
    pub springref: f64,
    pub springdamper: [f64; 2usize],
    pub limited: ::std::os::raw::c_int,
    pub range: [f64; 2usize],
    pub margin: f64,
    pub solref_limit: [mjtNum; 2usize],
    pub solimp_limit: [mjtNum; 5usize],
    pub actfrclimited: ::std::os::raw::c_int,
    pub actfrcrange: [f64; 2usize],
    pub armature: f64,
    pub damping: f64,
    pub frictionloss: f64,
    pub solref_friction: [mjtNum; 2usize],
    pub solimp_friction: [mjtNum; 5usize],
    pub group: ::std::os::raw::c_int,
    pub actgravcomp: mjtByte,
    pub userdata: *mut mjDoubleVec,
    pub info: *mut mjString,
}
pub type mjsJoint = mjsJoint_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsGeom_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub type_: mjtGeom,
    pub pos: [f64; 3usize],
    pub quat: [f64; 4usize],
    pub alt: mjsOrientation,
    pub fromto: [f64; 6usize],
    pub size: [f64; 3usize],
    pub contype: ::std::os::raw::c_int,
    pub conaffinity: ::std::os::raw::c_int,
    pub condim: ::std::os::raw::c_int,
    pub priority: ::std::os::raw::c_int,
    pub friction: [f64; 3usize],
    pub solmix: f64,
    pub solref: [mjtNum; 2usize],
    pub solimp: [mjtNum; 5usize],
    pub margin: f64,
    pub gap: f64,
    pub mass: f64,
    pub density: f64,
    pub typeinertia: mjtGeomInertia,
    pub fluid_ellipsoid: mjtNum,
    pub fluid_coefs: [mjtNum; 5usize],
    pub material: *mut mjString,
    pub rgba: [f32; 4usize],
    pub group: ::std::os::raw::c_int,
    pub hfieldname: *mut mjString,
    pub meshname: *mut mjString,
    pub fitscale: f64,
    pub userdata: *mut mjDoubleVec,
    pub plugin: mjsPlugin,
    pub info: *mut mjString,
}
pub type mjsGeom = mjsGeom_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsSite_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub pos: [f64; 3usize],
    pub quat: [f64; 4usize],
    pub alt: mjsOrientation,
    pub fromto: [f64; 6usize],
    pub size: [f64; 3usize],
    pub type_: mjtGeom,
    pub material: *mut mjString,
    pub group: ::std::os::raw::c_int,
    pub rgba: [f32; 4usize],
    pub userdata: *mut mjDoubleVec,
    pub info: *mut mjString,
}
pub type mjsSite = mjsSite_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsCamera_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub pos: [f64; 3usize],
    pub quat: [f64; 4usize],
    pub alt: mjsOrientation,
    pub mode: mjtCamLight,
    pub targetbody: *mut mjString,
    pub orthographic: ::std::os::raw::c_int,
    pub fovy: f64,
    pub ipd: f64,
    pub intrinsic: [f32; 4usize],
    pub sensor_size: [f32; 2usize],
    pub resolution: [f32; 2usize],
    pub focal_length: [f32; 2usize],
    pub focal_pixel: [f32; 2usize],
    pub principal_length: [f32; 2usize],
    pub principal_pixel: [f32; 2usize],
    pub userdata: *mut mjDoubleVec,
    pub info: *mut mjString,
}
pub type mjsCamera = mjsCamera_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsLight_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub pos: [f64; 3usize],
    pub dir: [f64; 3usize],
    pub mode: mjtCamLight,
    pub targetbody: *mut mjString,
    pub active: mjtByte,
    pub directional: mjtByte,
    pub castshadow: mjtByte,
    pub bulbradius: f64,
    pub attenuation: [f32; 3usize],
    pub cutoff: f32,
    pub exponent: f32,
    pub ambient: [f32; 3usize],
    pub diffuse: [f32; 3usize],
    pub specular: [f32; 3usize],
    pub info: *mut mjString,
}
pub type mjsLight = mjsLight_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsFlex_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub contype: ::std::os::raw::c_int,
    pub conaffinity: ::std::os::raw::c_int,
    pub condim: ::std::os::raw::c_int,
    pub priority: ::std::os::raw::c_int,
    pub friction: [f64; 3usize],
    pub solmix: f64,
    pub solref: [mjtNum; 2usize],
    pub solimp: [mjtNum; 5usize],
    pub margin: f64,
    pub gap: f64,
    pub dim: ::std::os::raw::c_int,
    pub radius: f64,
    pub internal: mjtByte,
    pub flatskin: mjtByte,
    pub selfcollide: ::std::os::raw::c_int,
    pub activelayers: ::std::os::raw::c_int,
    pub group: ::std::os::raw::c_int,
    pub edgestiffness: f64,
    pub edgedamping: f64,
    pub rgba: [f32; 4usize],
    pub material: *mut mjString,
    pub young: f64,
    pub poisson: f64,
    pub damping: f64,
    pub thickness: f64,
    pub nodebody: *mut mjStringVec,
    pub vertbody: *mut mjStringVec,
    pub node: *mut mjDoubleVec,
    pub vert: *mut mjDoubleVec,
    pub elem: *mut mjIntVec,
    pub texcoord: *mut mjFloatVec,
    pub elemtexcoord: *mut mjIntVec,
    pub info: *mut mjString,
}
pub type mjsFlex = mjsFlex_;
#[repr(C)]
#[derive(Debug, Clone)]
pub struct mjsMesh_ {
    pub element: *mut mjsElement,
    pub name: *mut mjString,
    pub content_type: *mut mjString,
    pub file: *mut mjString,
    pub refpos: [f64; 3usize],
    pub refquat: [f64; 4usize],
    pub scale: [f64; 3usize],
    pub inertia: mjtMeshInertia,
    pub smoothnormal: mjtByte,
    pub maxhullvert: ::std::os::raw::c_int,
    pub uservert: *mut mjFloatVec,
    pub usernormal: *mut mjFloatVec,
    pub usertexcoord: *mut mjFloatVec,
    pub userface: *mut mjIntVec,
    pub userfacetexcoord: *mut mjIntVec,
    pub plugin: mjsPlugin,
    pub info: *mut mjString,
}
